# wiki-on-this-day

./: .gitignore  README.md  generation_prompt.txt  pyproject.toml
src/: main.py
src/agents/: documentary_agent.py
src/chains/: documentary_chain.py
src/prompts/: documentary_anchor_script.txt  documentary_anchor_video.txt
src/tools/: video.py  video_stitcher.py  wikipedia.py
src/utils/: settings.py
tests/: test_wikipedia.py
